src/styles/dashboard.css
.dashboard-page {
  background-color: #f0f2f5;
  box-sizing: border-box;
  padding: 1rem 2rem;
  height: calc(100vh - 65px);
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

.dashboard-container {
  max-width: 1400px;
  margin: 0 auto;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.dashboard-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 2rem;
  margin: 0;
  align-items: start;
}

.chart-card {
  background-color: #ffffff !important;
  border-radius: 16px;
  padding: 1.5rem;
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
  border: 1px solid #e0e0e0;

  height: 520px;
  display: flex;
  flex-direction: column;
}

.dashboard-title {
  font-size: 1.6rem;
  margin: 0 0 0.5rem 0;
  color: #2c3e50;
  text-align: center;
  font-weight: 700;
}

.chart-card h2 {
  margin-bottom: 0.2rem;
  font-size: 1.1rem;
  color: #34495e;
  text-align: center;
}

.chart-card h2 {
  margin-bottom: 0.5rem;
  font-size: 1.2rem;
  color: #34495e;
  text-align: center;
}

.demo-message {
  text-align: center;
  padding-bottom: 15px;
}

@media (max-width: 1023px) {
  .dashboard-page {
    height: auto;
    overflow-y: auto;
  }
  .dashboard-grid {
    display: flex;
    flex-direction: column;
  }
}

